@@ -614,7 +614,7 @@ BUG FIXES
 	R is unable to find afm files (reported by Ivo Welch).
 
     o	R CMD BATCH <file> now also works when <file> does not end in a
-	newline on unix-alike platforms.
+	newline on Unix-alike platforms.
 
     o   terms.formula() got confused if 'data' argument was a list with
 	non-syntactic names.
@@ -629,6 +629,9 @@ BUG FIXES
     o	The default (protection pointer) stack size (the default for
 	'--max-ppsize') has been increased from 10000 to 50000 in order to
 	match the increased default options("expressions") (in R 2.1.0).
+
+    o	Rdconv -t latex protected only the first << and >> in a chunk
+	against conversion to guillemets.
 
 
 
